# gnomesocial

./: .gitignore  Makefile.am  autogen.sh  configure.ac  penge.pc.in
data/: Makefile.am  moblin-panel-myzone.schemas.in
data/theme/: Makefile.am
penge/: penge-grid-view.c
po/: ast.po  de.po  fi.po  fr.po  it.po
socialzone/: Makefile.am  penge-app-tile.c  penge-apps-pane.c  penge-events-pane.h  penge-everything-pane.c  penge-interesting-tile.c  penge-people-tile.c  penge-people-tile.h  penge-recent-file-tile.h  penge-tasks-pane.h  penge-utils.c  penge-utils.h  penge-view-background.c  penge-welcome-tile.c
src/: Makefile.am  gnome-social-zone  gnome-social-zone.c  moblin-panel-myzone.c
