themedir = $(pkgdatadir)/theme
dist_theme_DATA = \
	panel.css \
	backdrop.png \
	check_box.png \
	checked_box.png \
	default-album-artwork.png \
	default-avatar-icon.png \
	double-div-line.png \
	linus.png \
	no-content-tile-bg.png \
	no-content-tile-glow-bg.png \
	quotebackground.png \
	single-div-line.png \
	tile-bg.png \
	tile-partial-glow.png \
	time-bg-past.png \
	time-bg.png \
	toys.jpg \
	v-div-line.png \
	tile-dismiss-icon-hover.png \
	tile-dismiss-icon-normal.png \
	cat.png \
	avatar-bg.png \
	avatar_frame.png \
	avatar_icon.png \
	card_frame.png \
	card_frame_hover.png \
	dismiss_button.png \
	dismiss_button_hover.png \
	count-frame.png \
	count-frame-zero.png \
	frame-header.png \
	content-panel-background-highlight.png \
	content-panel-background.png \
	content-panel-header-grey.png \
	top-fade.png \
	event-task-tile-bg.png \
	intro-video-thumbnail.png \
	play-button.png \
	socialzone-default-background.png

